# dex-aggregator

./: Cargo.toml  README.md  dex_config.toml  pairs.csv
data/: all_pair_tokens.csv  pairs.csv  pathmap.json  poolmap.json
src/: config.rs  constants.rs  lib.rs  main.rs  optimization.rs  orchestrator.rs  pair_data.rs  paths.rs  pool.rs  quotes.rs  token_graph.rs  types.rs
src/core/: constants.rs  mod.rs  optimization.rs  pair.rs  path.rs  paths.rs  pool.rs  token_graph.rs  types.rs
src/core/indexer/: mod.rs  pair.rs  pair_indexer.rs  path.rs  path_indexer.rs  pool.rs  pool_indexer.rs
tests/: integration.rs
tests/working_dir/: amount_in.csv  given_amount_in_test_runs.csv  given_amount_out_test_runs.csv  poolmap.json
working_dir/: all_pair_tokens1.csv  pathmap.json
working_dir2/: pathmap.json  poolmap.json
