[package]
name = "dex-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.7"}
utoipa = { version = "5.1.3", features = ["axum_extras","openapi_extensions"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
serde_json = { version = "1.0"}